# drspec

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyinstaller.spec  pyproject.toml
.github/workflows/: ci.yml  deploy-npm.yml  deploy-pip.yml
docs/: project-context.md  specification.md  user-scenario.md
npm/: .gitignore  README.md  install.js  package-lock.json  package.json
scripts/: sync-versions.sh  version_downgrade.py
src/drspec/: __init__.py  __main__.py
src/drspec/agents/: critic.md  debugger.md  judge.md  librarian.md  proposer.md  vision_analyst.md
src/drspec/api/: __init__.py
src/drspec/cli/: __init__.py  app.py  output.py  validators.py
src/drspec/contracts/: __init__.py  confidence.py  executor.py  generator.py  schema.py  traces.py  validator.py
src/drspec/core/: __init__.py  handoff.py  hasher.py  hints.py  resources.py  scanner.py  status.py
src/drspec/db/: __init__.py  connection.py  graph.py  queries.py  schema.sql
tests/: __init__.py
tests/integration/: __init__.py  test_init_ide.py  test_pyinstaller.py
tests/unit/: __init__.py  test_api.py  test_cli_app.py  test_cli_commands.py  test_cli_output.py  test_confidence.py  test_contract_get_command.py  test_contract_list_command.py  test_contract_queries.py  test_contract_save_command.py  test_contract_schema.py  test_contract_validator.py  test_core_resources.py  test_cpp_parser.py  test_db_connection.py  test_db_graph.py  test_db_queries.py  test_deps_command.py  test_executor.py  test_generator.py  test_grapher.py  test_handoff.py  test_hasher.py  test_hints.py  test_ide_generators.py  test_init_command.py  test_javascript_parser.py  test_learning.py  test_librarian_template.py  test_missing_contracts.py  test_plotter.py  test_project_root.py  test_python_parser.py  test_queue_commands.py  test_root_cause.py  test_runtime_verification.py  test_scan_command.py  test_scanner.py  test_source_get_command.py  test_status.py  (+6 more)
(+40 files in other folders)
