[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drspec"
version = "0.1.0"
description = "AI-powered design-by-contract specification tool for runtime verification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Thanh" }
]
keywords = ["contracts", "verification", "testing", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "duckdb>=0.9.0",
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-python>=0.21.0,<0.22.0",
    "tree-sitter-javascript>=0.21.0,<0.22.0",
    "tree-sitter-cpp>=0.21.0,<0.22.0",
    "matplotlib>=3.5.0",
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/CaoDuyThanh/drspec"
Repository = "https://github.com/CaoDuyThanh/drspec"
Issues = "https://github.com/CaoDuyThanh/drspec/issues"
Documentation = "https://github.com/CaoDuyThanh/drspec#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "pyinstaller>=6.0",
]

[project.scripts]
drspec = "drspec.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/drspec"]

[tool.hatch.build.targets.wheel.force-include]
"src/drspec/agents" = "drspec/agents"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
